<resources>
    <string name="app_name">My resume</string>
    <string name="my_name">Farmer Liao</string>
    <string name="my_title">Software PG</string>
    <string name="my_home">Taiwan</string>
    <string name="my_birthday">1985.10.22</string>
    <string name="about_me_title">ABOUT ME</string>
    <string name="about_me"> Desire to be an mobile software development. 6 years experience in kinds of software coding. \n\n No doubt, I will be a great programmer. Be happy to make this world better.</string>
    <string name="contact_me_title">CONTACT ME</string>
    <string name="my_email">caress75052044@gmail.com\nfarmer_liao@163.com</string>
    <string name="my_phone">886919596368\n15683974293</string>
    <string name="my_github">https://github.com/farmerliao</string>
    <string name="my_skill_title">MY SKILL</string>
    <string name="work_experience_title">WORK EXPERIENCE</string>
    <string name="work_experience_duration_item1">2011-2013</string>
    <string name="work_experience_title_item1">Android Developer</string>
    <string name="work_experience_position_item1">\@Taipei</string>
    <string name="work_experience_description_item1">Develop for music listening online and download mp3 file.\n3 applications are posted on Google play now.</string>
    <string name="work_experience_duration_item2">2013-2014</string>
    <string name="work_experience_title_item2">Android Tablet Test Programmer</string>
    <string name="work_experience_position_item2">\@Shanghai</string>
    <string name="work_experience_description_item2">Design test program when android tablets are produced. Verify all functions for each component.</string>
    <string name="work_experience_duration_item3">2014-2017</string>
    <string name="work_experience_title_item3">Senior Automated Test Engineer</string>
    <string name="work_experience_position_item3">\@New Taipei</string>
    <string name="work_experience_description_item3">Design and solve all test requirements in production line. Integration program between instruments and devices under test.</string>
    <string name="work_experience_duration_item4">2010-2012</string>
    <string name="work_experience_title_item4">AI algorithm for games</string>
    <string name="work_experience_position_item4">\@Collage</string>
    <string name="work_experience_description_item4">Design and implement Monte-Carlo algorithm in Big2 poker game. Solve imperfect information problem.</string>
    <string name="education_title">EDUCATION</string>
    <string name="education_duration_item1">2008-2010</string>
    <string name="education_title_item1">National Dong Hwa University</string>
    <string name="education_major_master">Computer Science - Master</string>
    <string name="education_major_bachelor">Computer Science - Bachelor</string>
    <string name="education_duration_item2">2004-2008</string>
    <string name="education_title_item2">Fu Jen Catholic University</string>
    <string name="skill_title">SKILL</string>
    <string name="information_title">INFORMATION</string>
    <string name="information_name_title">NAME</string>
    <string name="information_birthday_title">BIRTHDAY</string>
    <string name="information_born_title">BORN</string>
    <string name="information_phone_title">PHONE</string>
    <string name="information_email_title">E-MAIL</string>
    <string name="information_github_title">GitHub</string>
    <string name="skill_title_java">Java</string>
    <string name="skill_title_mfc">MFC</string>
    <string name="skill_title_cplus">C++</string>
    <string name="skill_title_csharp">C#</string>
    <string name="skill_title_python">Python</string>
</resources>
